--- a/app-files/style.css
+++ b/app-files/style.css
@@ -828,3 +828,11 @@ body.view-control-buttons .viewControlButton {
 .viewControlButton-6 {
   margin-left: 105px;
 }
+
+#spot {
+  width: 300px;
+  height: 100px;
+  background: white;
+  color: black;
+  font-size: 20px;
+}
