added mainmenu and tiles for room02

--- a/app-files/style.css
+++ b/app-files/style.css
@@ -806,7 +806,7 @@ body.view-control-buttons .viewControlButton {
 
 .single-scene {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
@@ -823,10 +823,31 @@ body.view-control-buttons .viewControlButton {
   width: 100px;
 }
 
+.single-scene nav {
+
+  position: absolute;
+  top: 100px;
+  padding: 50px;
+  left: 100px;
+  /* width: 200px; */
+  /* height: 300px; */
+  background: pink;
+  font-size: 40px;
+  font-weight: 900;
+
+}
+
+nav .link {
+  display: block;
+  margin-bottom: 1em;
+  /* color: #000; */
+}
+
 #modal-1 {
   position: absolute;
   margin: auto;
   padding: 1em;
+  align-self: center;
   border-radius: 20px;
   background: black;
   width: 400px;
