--- a/app-files/style.css
+++ b/app-files/style.css
@@ -16,6 +16,7 @@
   -webkit-touch-callout: none;
   -ms-content-zooming: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  outline: none;
 }
 
 html,
@@ -57,13 +58,10 @@ a:visited {
 }
 
 #spot {
-  width: 300px;
-  height: 100px;
   background: white;
   color: black;
   font-size: 20px;
-  border-radius: 20px;
-  padding: 10px;
+  padding: 30px;
 }
 #spot img {
   width: 100px;
@@ -91,17 +89,37 @@ nav .link {
 #modal-1 {
   position: absolute;
   margin: auto;
-  padding: 1em;
+  padding: 2em;
   align-self: center;
-  border-radius: 20px;
-  background: black;
+  border-radius: 0px;
+  background: white;
   width: 400px;
-  height: 400px;
+  color: black;
+  /* height: 400px; */
 }
 
-#modal-1 h2 {
-  margin: 2em 0em;
+
+#modal-1 button {
+  border: 0;
+  background: black;
+  box-shadow: none;
+  color: white;
+  border-radius: 0px;
+  width: 100%;
+  height: 50px;
 }
+
+#modal-1 h2{
+  font-size: 30px;
+  margin-bottom: 1em;
+}
+
+#modal-1 p{
+  font-size: 18px;
+  line-height: 1.5em;
+}
+
+
 
 #modal-1-content img{
   width: 200px;
